Bug 70148 - "empty" .mount file causes segfault on bootup
Summary: "empty" .mount file causes segfault on bootup
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-04 18:53 UTC by Dave Reisner
Modified: 2013-10-04 22:24 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
bt full output (4.54 KB, text/plain)
2013-10-04 18:53 UTC, Dave Reisner
Details

Description Dave Reisner 2013-10-04 18:53:20 UTC
Created attachment 87135 [details]
bt full output

a57f7e2c828b852eb32f seems to introduce a regression which potentially causes systemd to segfault. To reproduce:

# echo '#foo' >/etc/systemd/systemd/tmp.mount
# reboot

Full backtrace attached.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.